# eu-ai-act-credit-assurance

./: .allowed_signers  .coverage  .gitignore  CHANGELOG.md  HYPOTHESES.md  HYPOTHESES.md.ots  LICENSE  README.md  data_manifest.sha256  data_quality.json  feature_groups.json  justfile  pyproject.toml
.github/workflows/: ci.yml
governance/: 00-scenario.md  02-risk-management-file.md  06-gdpr-dpia.md  08-traceability-matrix.md  09-evidence-index.md  10-faithfulness-findings.md  11-fairness-findings.md  12-robustness-and-recourse.md  13-conformity-dossier.md  14-audit-opinion.md  15-external-review.md  data-dictionary.md
metrics/: fairness_german_credit.json  faithfulness_german_credit.json  faithfulness_german_credit.json.committed  faithfulness_gmsc.json  models.json  reason_codes_german_credit.json  roar_german_credit.json  robustness_german_credit.json
models/: lightgbm.txt  lightgbm_gmsc.txt
scripts/: 00_data.py  05_manifest_and_dq.py  06_gmsc_prep.py  10_train.py  30_faithfulness.py  40_fairness.py  50_robustness.py  60_reason_codes.py  70_roar.py
src/credit_assurance/: __init__.py  data.py  explainers.py  faithfulness.py  models.py  perturbation.py
tests/: test_audit_remediation.py  test_data.py  test_explainers.py  test_faithfulness.py  test_metrics_integrity.py  test_models.py  test_perturbation.py
