[project]
name = "credit-assurance"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy", "pandas", "scikit-learn", "lightgbm", "interpret-core",
  "fairlearn", "shap", "lime", "dice-ml", "matplotlib", "ucimlrepo", "requests",
]
[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "jupytext", "nbconvert", "ipykernel", "ruff"]
[tool.pytest.ini_options]
addopts = "--cov=credit_assurance --cov-report=term-missing"
[tool.ruff]
line-length = 100
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/credit_assurance"]
