[project]
name = "credit-assurance"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
# Core deps used by the frozen instrument, data loaders, and the manifest/DQ script.
dependencies = [
  "numpy", "pandas", "pyarrow", "scikit-learn", "ucimlrepo",
]
[project.optional-dependencies]
# Model / explainer / plotting stack — needed from Phase 2 (train + benchmark) onward.
# numba is pinned so shap's transitive llvmlite resolves on Python 3.12 (old llvmlite < 0.42 fails).
models = [
  "lightgbm", "interpret-core", "fairlearn", "shap", "lime", "dice-ml", "matplotlib",
  "numba>=0.60", "requests",
]
dev = ["pytest", "pytest-cov", "ruff"]
notebooks = ["jupytext", "nbconvert", "ipykernel"]
[tool.pytest.ini_options]
addopts = "--cov=credit_assurance --cov-report=term-missing"
[tool.ruff]
line-length = 100
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/credit_assurance"]
